--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,14 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		  <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
 	</dependencies>
-  
-  
+
   
   <build>
     <sourceDirectory>src</sourceDirectory>
