--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>frWeMove</display-name>
+  
+  <!-- FILTRE ESPACE CONDUCTEUR -->
+  
+  <filter>
+    <filter-name>DriverRestrictionFilter</filter-name>
+    <filter-class>fr.wemove.filter.DriverRestrictionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>DriverRestrictionFilter</filter-name>
+    <url-pattern>/conducteur/*</url-pattern>
+  </filter-mapping>
+  
+  
+    <!-- FILTRE ESPACE UTILISATEUR -->
+  
+  <filter>
+    <filter-name>UtilisateurRestrictionFilter</filter-name>
+    <filter-class>fr.wemove.filter.UtilisateurRestrictionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UtilisateurRestrictionFilter</filter-name>
+    <url-pattern>/utilisateur/*</url-pattern>
+  </filter-mapping>
+  
+  
   <servlet>
     <servlet-name>dispatcher</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
