--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,18 @@
 			<version>1.9.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.4.4</version>
+		</dependency>
+
 	</dependencies>
 
 
@@ -127,8 +139,8 @@
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
-			
-			
+
+
 		</plugins>
 	</build>
 </project>
