--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,7 +13,25 @@
     <url-pattern>/conducteur/*</url-pattern>
   </filter-mapping>
   
+
   
+  <filter>
+        <filter-name>Spring Character Encoding Filter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+     <filter-mapping>
+     <filter-name>Spring Character Encoding Filter</filter-name>
+     <url-pattern>/*</url-pattern>
+   </filter-mapping>
+    
     <!-- FILTRE ESPACE UTILISATEUR -->
   
   <filter>
@@ -24,7 +42,6 @@
     <filter-name>UtilisateurRestrictionFilter</filter-name>
     <url-pattern>/utilisateur/*</url-pattern>
   </filter-mapping>
-  
   
   <servlet>
     <servlet-name>dispatcher</servlet-name>
