--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,25 @@
 	</properties>
 
 	<dependencies>
-
-
+		
+				<dependency>
+					<groupId>javax.mail</groupId>
+					<artifactId>mail</artifactId>
+					<version>1.4.7</version>
+				</dependency>
+		
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>4.3.6.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>4.3.6.RELEASE</version>
+		</dependency> 
+		
 		<!-- Spring Web MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
