--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/views/jsp/Utilisateur/utilisateur_demandecourse.jsp=UTF-8
 encoding//src/fr/wemove/controller/DriverController.java=UTF-8
